fix spacing for course page title

--- a/static/sass/_courseware.scss
+++ b/static/sass/_courseware.scss
@@ -319,6 +319,7 @@ nav.progress.wrapper-course-material
 	word-spacing: .05em;
 	text-transform: uppercase;
 	margin-top:15px;
+	margin-bottom:15px;
 	text-align:left;
 }
 
